--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,8 @@ spring:
       matching-strategy: ant_path_matcher
   profiles:
     active: ec2
+  datasource:
+    url:
+    password:
+    username:
+
