reactor: cicd테스트용 yml 변경

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ package:
   services:
     - docker:dind
   before_script:
-    - docker login registry.gitlab.com -u $GITLAB_USER -p $GITLAB_PASSWORD
+#    - docker login registry.gitlab.com -u $GITLAB_USER -p $GITLAB_PASSWORD
   script:
     - docker build -t registry.gitlab.com/$GITLAB_GROUP/$PROJECT_NAME .
     - docker push registry.gitlab.com/$GITLAB_GROUP/$PROJECT_NAME
