--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url:
+  thymeleaf:
+    suffix: .html
+    prefix: classpath:/templates/
+    cache: false
