-refactor: marketController,yml 변경
- /farmer/farmer-gather-writeform -> farmer/farmer-gather-writeform

- /company/company-gather-writeform -> company/company-gather-writeform

- yml thymeleaf설정추가

#91

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  thymeleaf:
+    suffix: .html
+    prefix: classpath:/templates/
+    cache: false
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
