--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,11 @@ server:
       charset: UTF-8
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 100MB
+
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -31,8 +36,6 @@ spring:
         format_sql: true
     generate-ddl: true
     open-in-view: false
-
-
 
   redis:
     host: #
@@ -91,3 +94,8 @@ business-api:
 toss:
   api:
     testSecretApiKey: #
+
+
+kakao:
+  host: https://dapi.kakao.com/v2/local/search/address.json?query=
+  apiKey: #
